--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -19,6 +19,10 @@
     margin-top: 5%;
   }
 
+  .pad-bottom {
+    margin-bottom: 15%;
+  }
+
   .tag {
     //height: 30px;
     fill: $primary-color;
